# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.187 2005/03/08 18:41:41 wolf31o2 Exp $

  08 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  +livecd/cdtar/isolinux-2.13-cdtar.tar.bz2,
  +livecd/cdtar/isolinux-2.13-memtest86+-cdtar.tar.bz2:
  Adding experimental isolinux cdtar for isolinux 2.13 and memtest86+ 1.51.

  08 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh:
  Removed hdparm from default runlevel as it break ide=nodma at boot.

  07 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/kmerge.sh,
  livecd/runscript-support/pre-kmerge.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh:
  Revert last set of changes and remove portage version check from emerge in
  livecd-stage1, as it breaks catalyst's ability to fail properly on an
  incomplete emerge.

  07 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/kmerge.sh,
  livecd/runscript-support/pre-kmerge.sh:
  Change genkernel check to use best_version and has_version to determine if
  the any previously installed versions of genkernel are up to date. Change
  emerge line for kernels to use -n option to only install if they were not
  previously installed.

  06 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  livecd/cdtar/silo-1.2.6-sparc-cdtar.tar.bz2,
  -livecd/cdtar/silo-1.3.2-sparc64-cdtar.tar.bz2,
  -livecd/cdtar/silo-1.4.4-sparc32-cdtar.tar.bz2,
  livecd/runscript/sparc-archscript.sh:
  Applying sparc32 patch from gustavoz. Replacing silo cdtar files with
  unified sparc32/sparc64 cdtar.

  06 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh,
  livecd/runscript-support/pre-kmerge.sh:
  Change sudoers update to only run if /etc/sudoers exists and only reduce
  splash to 1024x768 on minimal and universal install CD.
