@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript/Attic/ppc-archscript.sh,v 1.6 2005/03/03 22:36:08 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript/Attic/ppc-archscript.sh,v 1.7 2005/03/09 00:22:05 wolf31o2 Exp $
 
 case $1 in
 	kernel)
@@ -58,6 +58,6 @@ case $1 in
 
 	iso)
 		# The name of the iso should be retrieved from the specs. For now, asssume GentooPPC_2004.0
-		mkisofs -J -r -netatalk -hfs -probe -map boot/map.hfs -part -no-desktop -hfs-volid GentooPPC_2004.0 -hfs-bless ./boot -o ${2} ${clst_cdroot_path}
+		mkisofs -J -r -netatalk -hfs -probe -map boot/map.hfs -part -no-desktop -hfs-volid GentooPPC_2004.0 -hfs-bless ./boot -V "${iso_volume_id}" -o ${2} ${clst_cdroot_path}
 	;;
 esac
